--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@technohiru/eslint-config-react",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Common ESLint+Prettier code standards for React projects",
   "module": "true",
   "keywords": [
@@ -10,7 +10,7 @@
   ],
   "author": "João Iacillo",
   "license": "MIT",
-  "devDependencies": {
+  "dependencies": {
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.2",
